RESOLVED FIXED125679
Fix a couple stray uses of RefPtr that should release
https://bugs.webkit.org/show_bug.cgi?id=125679
Summary Fix a couple stray uses of RefPtr that should release
Darin Adler
Reported 2013-12-12 21:40:04 PST
Fix a couple stray uses of RefPtr that should release
Attachments
Patch (1.91 KB, patch)
2013-12-12 21:41 PST, Darin Adler
no flags
Darin Adler
Comment 1 2013-12-12 21:41:05 PST
WebKit Commit Bot
Comment 2 2013-12-13 01:08:21 PST
Comment on attachment 219153 [details] Patch Clearing flags on attachment: 219153 Committed r160535: <http://trac.webkit.org/changeset/160535>
WebKit Commit Bot
Comment 3 2013-12-13 01:08:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.