Fix a couple stray uses of RefPtr that should release https://bugs.webkit.org/show_bug.cgi?id=125679

Reviewed by Andreas Kling.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFilter): Add calls to release, in
one case rearranging the order of operations slightly so we
don't release the pointer before using it.


Canonical link: https://commits.webkit.org/143705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160535 268f45cc-cd09-0410-ab3c-d52691b4dbfc